--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-matplotlib==3.8.4
-numpy==2.1.3
-pandas==2.2.3
-streamlit==1.32.0
+matplotlib>=3.8.4
+numpy>=1.19.3,<2.0
+pandas>=2.2.3
+streamlit>=1.32.0
